--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "https://github.com/dejorrit/animate-element",
   "author": "Jorrit Tinholt",
   "license": "MIT",
-  "dev-dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-babili": "^0.1.4",
     "babel-preset-env": "^1.6.1"
